--- a/AmbermoonAndroid/AmbermoonAndroid.csproj
+++ b/AmbermoonAndroid/AmbermoonAndroid.csproj
@@ -1,88 +1,88 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0-android</TargetFramework>
-    <SupportedOSPlatformVersion>23.0</SupportedOSPlatformVersion>
-	<RuntimeIdentifiers>android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
-    <OutputType>Exe</OutputType>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <ApplicationId>com.pyrdacor.AmbermoonAndroid</ApplicationId>
-    <ApplicationVersion>1</ApplicationVersion>
-    <ApplicationDisplayVersion>1.10.9</ApplicationDisplayVersion>
-    <Configurations>Debug;Release</Configurations>
-    <GenerateResourceUsePreserializedResources>false</GenerateResourceUsePreserializedResources>
-    <SignAssembly>False</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLES</DefineConstants>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-    <AndroidUseAapt2>True</AndroidUseAapt2>
-    <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
-    <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
-    <DebugType>embedded</DebugType>
-    <DebugSymbols>True</DebugSymbols>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);GLES</DefineConstants>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-	  <RunAOTCompilation>False</RunAOTCompilation>
-    <PublishTrimmed>False</PublishTrimmed>
-	<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-	<AndroidLinkTool>none</AndroidLinkTool>
-	<AndroidPackageFormat>aab</AndroidPackageFormat>
-	<DebugSymbols>False</DebugSymbols>
-	  <AndroidLinkMode>None</AndroidLinkMode>
-	  <DebugType>none</DebugType>
-	  <AndroidEnableProguard>false</AndroidEnableProguard>
-	  <AndroidEnableR8>false</AndroidEnableR8>
-	  <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
-	  <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
-	  <AndroidUseDebugSymbols>true</AndroidUseDebugSymbols>
-	  <AndroidEnableReleaseSigning>false</AndroidEnableReleaseSigning>
-	  <Optimize>false</Optimize>
-	  <AndroidUseAapt2>True</AndroidUseAapt2>
-	  <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-	  <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0-android</TargetFramework>
+		<SupportedOSPlatformVersion>23.0</SupportedOSPlatformVersion>
+		<RuntimeIdentifiers>android-arm;android-arm64;android-x86;android-x64</RuntimeIdentifiers>
+		<OutputType>Exe</OutputType>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<ApplicationId>com.pyrdacor.AmbermoonAndroid</ApplicationId>
+		<ApplicationVersion>1</ApplicationVersion>
+		<ApplicationDisplayVersion>1.10.9</ApplicationDisplayVersion>
+		<Configurations>Debug;Release</Configurations>
+		<GenerateResourceUsePreserializedResources>false</GenerateResourceUsePreserializedResources>
+		<SignAssembly>False</SignAssembly>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>$(DefineConstants);GLES</DefineConstants>
+		<EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+		<AndroidUseAapt2>True</AndroidUseAapt2>
+		<AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+		<AndroidPackageFormat>apk</AndroidPackageFormat>
+		<AndroidEnableMultiDex>False</AndroidEnableMultiDex>
+		<DebugType>embedded</DebugType>
+		<DebugSymbols>True</DebugSymbols>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DefineConstants>$(DefineConstants);GLES</DefineConstants>
+		<EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+		<RunAOTCompilation>False</RunAOTCompilation>
+		<PublishTrimmed>False</PublishTrimmed>
+		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
+		<AndroidLinkTool>none</AndroidLinkTool>
+		<AndroidPackageFormat>apk</AndroidPackageFormat>
+		<DebugSymbols>False</DebugSymbols>
+		<AndroidLinkMode>None</AndroidLinkMode>
+		<DebugType>none</DebugType>
+		<AndroidEnableProguard>false</AndroidEnableProguard>
+		<AndroidEnableR8>false</AndroidEnableR8>
+		<AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+		<AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
+		<AndroidUseDebugSymbols>true</AndroidUseDebugSymbols>
+		<AndroidEnableReleaseSigning>false</AndroidEnableReleaseSigning>
+		<Optimize>false</Optimize>
+		<AndroidUseAapt2>True</AndroidUseAapt2>
+		<AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+		<AndroidEnableMultiDex>False</AndroidEnableMultiDex>
+	</PropertyGroup>
 	<PropertyGroup>
 		<AndroidEnableProguard>false</AndroidEnableProguard>
 		<AndroidEnableR8>false</AndroidEnableR8>
 	</PropertyGroup>
 	<ItemGroup>
-	  <None Remove="google-services.json" />
+		<None Remove="google-services.json" />
 	</ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.22.0" />
-    <PackageReference Include="SonicArranger" Version="1.0.12" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.16.0.2" />
-    <PackageReference Include="System.Resources.Extensions" Version="9.0.8" />
-    <PackageReference Include="Xamarin.Firebase.Analytics" Version="123.0.0" />
-    <PackageReference Include="Xamarin.Firebase.Crashlytics" Version="120.0.0" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.7.2" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Tasks" Version="118.3.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ambermoon.Audio.Android\Ambermoon.Audio.Android.csproj" />
-    <ProjectReference Include="..\Ambermoon.Common\Ambermoon.Common.csproj" />
-    <ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
-    <ProjectReference Include="..\Ambermoon.Data.Common\Ambermoon.Data.Common.csproj" />
-    <ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
-    <ProjectReference Include="..\Ambermoon.Renderer.OpenGL\Ambermoon.Renderer.OpenGL.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\raw\" />
-  </ItemGroup>
-  <ItemGroup>
-    <GoogleServicesJson Include="google-services.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="proguard-rules.pro">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Silk.NET.Input" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
+		<PackageReference Include="Silk.NET.Windowing.Sdl" Version="2.22.0" />
+		<PackageReference Include="SonicArranger" Version="1.0.12" />
+		<PackageReference Include="Xamarin.AndroidX.Core" Version="1.16.0.2" />
+		<PackageReference Include="System.Resources.Extensions" Version="9.0.8" />
+		<PackageReference Include="Xamarin.Firebase.Analytics" Version="123.0.0" />
+		<PackageReference Include="Xamarin.Firebase.Crashlytics" Version="120.0.0" />
+		<PackageReference Include="Xamarin.GooglePlayServices.Base" Version="118.7.2" />
+		<PackageReference Include="Xamarin.GooglePlayServices.Tasks" Version="118.3.2" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Ambermoon.Audio.Android\Ambermoon.Audio.Android.csproj" />
+		<ProjectReference Include="..\Ambermoon.Common\Ambermoon.Common.csproj" />
+		<ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
+		<ProjectReference Include="..\Ambermoon.Data.Common\Ambermoon.Data.Common.csproj" />
+		<ProjectReference Include="..\Ambermoon.Data.Legacy\Ambermoon.Data.Legacy.csproj" />
+		<ProjectReference Include="..\Ambermoon.Renderer.OpenGL\Ambermoon.Renderer.OpenGL.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Resources\raw\" />
+	</ItemGroup>
+	<ItemGroup>
+		<GoogleServicesJson Include="google-services.json" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Update="proguard-rules.pro">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
